<resources>
    <string name="no_calc">no calculators</string>
    <string name="app_name">Calc4Runner</string>
    <string name="kph">km/h</string>
    <string name="exception_za_duzo_sekund">Enter less than 60 seconds</string>
    <string name="plec">Gender</string>
<string name="wzrost">Height</string>
    <string name="masa">Mass</string>
<string name="kg_jednostka">kg</string>
    <string name="cm_jednostka">cm</string>
<string name="kobieta">Woman</string>
    <string name="mezczyzna">Man</string>
<string name="twoje_bmi">Your BMI is:</string>
    <string name="p2s_calc_menu_name">Pace2Speed</string>
    <string name="p2s_calc_menu_info">Convert pace to speed</string>
    <string name="p2s_info">Enter the time for one kilometer and calculate what is the speed:</string>
    <string name="p2s_minuty">min.</string>
    <string name="p2s_sekundy">sec.</string>
    <string name="p2s_oblicz">Calculate</string>
    <string name="p2s_wynik"> </string>
    <string name="bmi_calc_menu_name">BMI</string>
    <string name="bmi_calc_menu_info">Body Mass Index</string>
    <string name="hrmax_calc_menu_name">HRmax</string>
    <string name="hrmax_calc_menu_info">Maximum heart rate</string>
    <string name="bmi_info">Fill in the fields\nand calculate your BMI:</string>
    <string name="bmi_oblicz">Calculate BMI</string>
    <string name="bmi_wynik"> </string>
    <string name="bmi_wyniszczenie">weakness</string>
    <string name="bmi_wychudzenie">emaciation</string>
    <string name="bmi_niedowaga">underweight</string>
    <string name="bmi_waga_prawidlowa">normal weight</string>
    <string name="bmi_nadwaga">overweight</string>
    <string name="bmi_pierwszy_st_otylosci">I degree of obesity</string>
    <string name="bmi_drugi_st_otylosci">II degree of obesity</string>
    <string name="bmi_otylosc_kliniczna">clinical obesity</string>
    <string name="ustawienia">Settings</string>
    <string name="o_programie">About</string>
    <string name="pomoc">Help</string>
    <string name="app_name2">Runner Calculator</string>
    <string name="app_version">1.2.3</string>
    <string name="wersja">version</string>
    <string name="app_autor_name">Marcin Zaremba</string>
    <string name="app_autor_email">marcin.zaremba@gmail.com</string>
    <string name="bmi_optymalne_bmi_dla_kobiet">The most attractive women have BMI in the range</string>
    <string name="bmi_optymalne_bmi_dla_mezczyzn">The most desirable BMI for men is between</string>
    <string name="bmi">BMI</string>
    <string name="ocena">rating</string>
    <string name="waga">weight (kg)</string>
    <string name="bmi_mozliwe_wyniki">Possible results:</string>
    <string name="tempo">pace</string>
    <string name="predkosc">speed</string>
    <string name="minkm">min/km</string>
    <string name="mph">mph</string>
    <string name="masa_podaj">Enter your weight</string>
    <string name="wzrost_podaj">Enter the increase</string>
    <string name="plec_podaj">Enter your gender</string>
    <string name="wiek">Age</string>
    <string name="wiek_podaj">Enter your age</string>
    <string name="lat_jednostka">years</string>
    <string name="hrmax_info">Fill in the fields and calculate the maximum heart rate (HRmax):</string>
    <string name="hrmax_oblicz">Calculate HRmax</string>
    <string name="metoda">method</string>
    <string name="hrmax">HRmax</string>
    <string name="hrmax_metoda_1_nazwa">Sally Edwards</string>
    <string name="hrmax_metoda_2_nazwa">220 - age</string>
    <string name="hrmax_metoda_3_nazwa">205.8 - (0.685 * age)</string>
    <string name="hrmax_metoda_4_nazwa">206.3 - (0.711 * age)</string>
    <string name="hrmax_metoda_5_nazwa">217 - (0.85 * age)</string>
    <string name="hrmax_wynik">Maximum heart rate for given values (depending on the method of calculation) is in the range:</string>
    <string name="hrmax_szczegolowe_wyniki">Detailed results:</string>
    <string name="jak_zaczac">How do I start?</string>
    <string name="o_programie_pomoc">The application contains multiple calendars that can be helpful in every runner\'s training.</string>
    <string name="jak_zaczac_pomoc">At the beginning it is recommended to fill the basic data  (gender, weight, height, age) in the program settings from the application menu. Details will be automatically saved in the form so it will not be necessary to enter them again.</string>
    <string name="ustawienia_pomoc">Application settings collects Runner parameters, which will be used later to auto-complete data needed for calculations. There is no need to fill these data but this is recommended - it saves time and energy that can be used for example for running</string>
    <string name="bmi_pomoc">BMI (Body Mass Index) is the ratio of body weight (given in kilograms) by the square of height (given in meters). By calculating BMI, we can determine the amount of body fat. When BMI is higher risk of many diseases (eg type II diabetes, hypertension, stroke, heart failure, coronary heart disease) is greater. But please note - BMI is rather imprecise indicator of overweight or the risk of diseases associated with it.</string>
    <string name="hrmax_pomoc">HRmax (maximal heart rate) is a heart rate telling the intensity when we (subjectively) feel that it is a maximum effort. Determination of maximum heart rate is used primarily to determine the areas of effort and is useful in training with heart rate monitor. The value of maximum heart rate is genetically determined and does not reflect the level of athletic. HRmax decreases with age and is generally higher for women. Please note that your maximum heart rate is different for each sport - for example in swimming, it is lower than in the running. Everything depends on the number of muscles involved in the effort. There are several models to determining the maximum heart rate. Sally Edwards model is most accurately determines the maximum heart rate. However, note that each of the models can be quite significant fault tolerance, and using the direct method is much better. Direct method involves making a maximum effort (preferably in competition), but for this you need a heart rate monitor.</string>
    <string name="p2s_pomoc">The calculator converts pace to speed. In running we have pace in min/km (the number of minutes per kilometer) not speed in km/h (kilometers per hour) or mph (number of miles per hour). We find pace in the results of the competition, in heart rate monitor or applications like Endomondo. If we want to find out how speed we have in training or in the competition simply just use this calculator.</string>
    <string name="rtp_pomoc">The calculator shows the probable times what can be achieved by the Runners during competitions at various distances. Calculations are performed using the model of Peter Riegel, which takes into account gender and time achieved when running on a given distance. Please note that the calculations are not accurate - it is only theoretical results, which may differ from reality because they do not take into account many important data (condition strength, etc.).</string>
    <string name="dane_usera">User data</string>
    <string name="pref_title">Calc4Runners - Settings</string>
    <string name="ilosc_minut">Number of minutes</string>
    <string name="ilosc_sekund">Number of seconds</string>
    <string name="rtp_calc_menu_name">RaceTimePredictor</string>
    <string name="rtp_calc_menu_info">Calculate time that you reach on the competition</string>
    <string name="dystans">Distance</string>
    <string name="metry_jednostka">m</string>
    <string name="czas">Time</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="rtp_oblicz">Calculate</string>
    <string name="rtp_info">Fill in the fields and calculate time that you reach on the competition</string>
    <string name="dystans_w_m">Distance [m]</string>
    <string name="tempo_min_na_km">Pace [min/km]</string>
    <string name="dystans_5000">5000</string>
    <string name="dystans_10000">10000</string>
    <string name="dystans_15000">15000</string>
    <string name="dystans_21097">21097</string>
    <string name="dystans_42195">42195</string>
    <string name="rtp_prognozowane_czasy">Table of expected times for specific distances:</string>
    <string name="niewlasciwy_format_czasu">Invalid time format</string>
    <string name="niewlasciwy_format_dystansu">Wrong format of distance</string>
    <string name="tetno_jednostka">bpm</string>
    <string name="tz_oblicz">Calculate</string>
    <string name="tz_info">Enter Resting Heart Rate and HRmax then click Calculate</string>
    <string name="tz_calc_menu_name">Training Zones</string>
    <string name="tz_calc_menu_info">Check your target heart rate for running</string>
    <string name="tz_tabela_01_polska_szkola_treningu">The Polish school of training:</string>
    <string name="tz_tabela_02_strefy_tetna_wg_karvonena">Heart Rates Zones by Karvonen:</string>
    <string name="strefa">Zone</string>
    <string name="tetno_z_jednostka">Heart Rate (bpm)</string>
    <string name="zastosowanie">Target</string>
    <string name="zastosowanie_bc1">Continuous run in the first intensity. In the Polish school of training, it is easy run, faster than a jog but slower than BC2. At this intensity is most long distance run. BC1 is also called a conversational pace, because it is so slow that it allows you to free conversation in running time. Heart rate during the BC1 stands at 65&#8211;79% HRmax. This is the primary measure training for all runners.</string>
    <string name="zastosowanie_bc2">Continuous run in the second intensity. In the Polish school of training, it is run at a medium pace, slower than the BC3, but faster than BC1. Running on this intensity is quite fast, but not much tiring. It is the intensity which can be easily maintained for 60&#8211;90 minutes in a training or longer during the competition. Talking during a run at this zone is difficult, but possible, an indication of heart rate during a run is about 75&#8211;85% of HRmax.</string>
    <string name="zastosowanie_bc3">Continuous run in the third intensity. In the Polish school of training, it is fast long-distance run. Run is so fast that it doesn\'t allow conversation, shortness of breath is a large, heart rate is around 85&#8211;95% HRmax. It is a heavy training measure, used by advanced runners.</string>
    <string name="zastosowanie_garnin_strefa_1">Beginning-level aerobic training. Reduces stress. The lowest level you can exercise in and still increase fitness levels. For beginners or people who have not training for a long period of time. This zone can be for just improving your overall health. It can also be a good recovery zone for people who are over-training and need to take a break. This mode is also good for people who want to lose weight as the main source of fuel used by the body is fat stores.</string>
    <string name="zastosowanie_garnin_strefa_2">Basic cardiovascular training. Good recovery pace. This is the target heart rate zone where the heart begins to benefit. Training in this zone will begin improve your hearts ability to pump blood and improve the muscle cells ability to utilize oxygen. In this zone stored body fat is the primary source of energy utilized hence this zone is referred to as the weight management zone. This is a good zone for long slow distance exercise as the body becomes more efficient at feeding the working muscles more efficiently especially with fat as the main fuel source.</string>
    <string name="tz_pomoc">The calculator calculates heart rate for each training zone. % HRmax calculated in a different way for each method. The Karvonen method include resting heart rate, forumla Polish school of training is simplified &#8211; the calculations need only HRmax.</string>
    <string name="app_webpage">http://marceen.pl/android/calc4runner</string>
</resources>