<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_height="fill_parent" 
        android:isScrollContainer="true" 
        android:scrollbarAlwaysDrawVerticalTrack="true" 
        android:scrollbarStyle="outsideInset" 
        android:scrollbars="vertical" android:layout_width="fill_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="@string/o_programie"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bialy"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_programie_pomoc" >
    </TextView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:text="@string/jak_zaczac"
        android:textColor="@color/bialy"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jak_zaczac_pomoc" >
    </TextView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:text="@string/ustawienia"
        android:textColor="@color/bialy"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ustawienia_pomoc" >
    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="@string/bmi"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bialy"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_pomoc" >
    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="@string/hrmax"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bialy"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hrmax_pomoc" >
    </TextView>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="@string/rtp_calc_menu_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bialy"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rtp_pomoc" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="@string/p2s_calc_menu_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bialy"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2s_pomoc" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="@string/tz_calc_menu_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bialy"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tz_pomoc" >
    </TextView>
</LinearLayout>

</ScrollView>
