<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_height="fill_parent" 
        android:isScrollContainer="true" 
        android:scrollbarAlwaysDrawVerticalTrack="true" 
        android:scrollbarStyle="outsideInset" 
        android:scrollbars="vertical" android:layout_width="fill_parent">
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/logo_512px" android:id="@+id/imageView1" android:adjustViewBounds="true" android:layout_gravity="center" android:maxHeight="150dip" android:maxWidth="150dip" android:padding="20dip" android:contentDescription="@string/app_name"></ImageView>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_gravity="center" android:text="@string/app_name"></TextView>

    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_gravity="center" android:text="@string/app_name2"></TextView>

    <LinearLayout android:id="@+id/linearLayout1" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView android:text="@string/wersja" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_gravity="center" android:paddingRight="5dip"></TextView>
        <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_version"></TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/app_webpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_webpage"
        android:paddingTop="6dip" android:autoLink="web"/>

    <TextView android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView6" android:text="@string/app_autor_name" android:paddingTop="35dp"></TextView>
    <TextView android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView7" android:paddingBottom="40dp"></TextView>
    
</LinearLayout>
</ScrollView>