<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_height="fill_parent" 
        android:isScrollContainer="true" 
        android:scrollbarAlwaysDrawVerticalTrack="true" 
        android:scrollbarStyle="outsideInset" 
        android:scrollbars="vertical" android:layout_width="fill_parent" android:id="@+id/scroll_bmi">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="vertical">
    <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:text="@string/bmi_info" android:id="@+id/bmi_txt_info" android:gravity="center" android:layout_width="fill_parent" android:padding="20dip"></TextView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="3" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bmi_plec_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/plec" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:layout_weight="0.3" >

                <RadioButton
                    android:id="@+id/bmi_radio_plec_k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/kobieta" />

                <RadioButton
                    android:id="@+id/bmi_radio_plec_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mezczyzna" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bmi_masa_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/masa" />

            <EditText
                android:id="@+id/bmi_editText_masa"
                android:layout_width="wrap_content"
                android:focusable="true"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:width="70dip" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="3dip"
                android:text="@string/kg_jednostka"
                android:width="60dip" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bmi_wzrost_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/wzrost" />

            <EditText
                android:id="@+id/bmi_editText_wzrost"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:width="70dip" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="3dip"
                android:text="@string/cm_jednostka"
                android:width="60dip" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bmi_btn_oblicz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_span="3"
                android:text="@string/bmi_oblicz" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/bmi_wynik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

    </LinearLayout>
</LinearLayout>
</ScrollView>
