<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rtp_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="vertical">
    <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rtp_txt_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/rtp_info" >
</TextView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="3" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/rtp_plec_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/plec" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3" >

                <RadioButton
                    android:id="@+id/rtp_radio_plec_k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/kobieta" />

                <RadioButton
                    android:id="@+id/rtp_radio_plec_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mezczyzna" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/rtp_textview_dystans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/dystans" />

            <Spinner
                android:id="@+id/rtp_spinner_dystans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/rtp_textview_dystans_jednostka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="3dip"
                android:text="@string/metry_jednostka"
                android:width="60dip" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/rtp_textview_czas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/czas" />

            <EditText
                android:id="@+id/rtp_editText_czas"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:width="60dip" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/rtp_textview_czas_jednostka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:paddingLeft="3dip"
                android:text="@string/hh_mm_ss"
                android:width="100dip" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/rtp_btn_oblicz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_span="3"
                android:text="@string/rtp_oblicz" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/race_time_predictor_wynik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dip" >

    </LinearLayout>
</LinearLayout>
</ScrollView>
